--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,23 @@
 Package: MNNPC
 Title: Minnesota Native Plant Community Classification System data.
 Version: 0.1
-Authors@R: c(person(given = "Zeke",
-                    family = "Marshall",
+Authors@R: c(person(given = "Amy",
+                    family = "Kendig",
                     role = c("aut", "cre"),
+                    email = "amy.kendig@state.mn.us",
+                    comment = c(ORCID = "0000-0002-2774-1795")),
+             person(given = "Zeke",
+                    family = "Marshall",
+                    role = c("aut"),
                     email = "zekmar@ceh.ac.uk",
                     comment = c(ORCID = "0000-0001-9260-7827"))
              )
 Description: Minnesota Native Plant Community Classification System objects for RMAVIS.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Depends: 
     R (>= 4.4)
 LazyData: true
-Imports: 
-Suggests: 
 Config/testthat/edition: 3
