Adding mnnpc_vc_types_named

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: MNNPC
-Title: Minnesota Native Plant Community Classification System data.
+Title: Minnesota Native Plant Community Classification System data
 Version: 0.1.0
 Authors@R: c(person(given = "Amy",
                     family = "Kendig",
