Adding dplyr to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,5 +22,7 @@ Depends:
     R (>= 4.4)
 LazyData: true
 Config/testthat/edition: 3
+Imports:
+    dplyr (>= 1.1.0)
 Suggests: 
     testthat (>= 3.0.0)
