--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,12 @@ Authors@R: c(person(given = "Amy",
                     family = "Marshall",
                     role = c("aut"),
                     email = "zekmar@ceh.ac.uk",
-                    comment = c(ORCID = "0000-0001-9260-7827"))
+                    comment = c(ORCID = "0000-0001-9260-7827")),
+             person(given = "Alaina", 
+                    family = "Berger", 
+                    email = "alaina.berger@state.mn.us", 
+                    role = c("aut"),
+                    comment = c(ORCID = "0000-0003-2736-0578"))
              )
 Description: Minnesota Native Plant Community Classification System objects for RMAVIS.
 License: MIT + file LICENSE
