--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,8 @@ Depends:
 LazyData: true
 Config/testthat/edition: 3
 Imports:
-    dplyr (>= 1.1.0)
+    dplyr (>= 1.1.0),
+    stringr,
+    tidyr
 Suggests: 
     testthat (>= 3.0.0)
